# tensorrt-dcnv2-plugin

./: .gitignore  README.md
cpp/: CMakeLists.txt  dcn_detector.h  dcn_infer.cpp  detect_main.cpp  trt_engine.h
python/: 01_oracle_and_export.py  02_build_and_validate.py  03_benchmark.py  04_detect_image.py  05_backbone_to_trt.py  06_mixed_precision.py  07_save_engine.py  08_export_det_engine.py  09_ptq_modelopt_qdq.py  dcn_ort_op.py  detector.py  probe_export.py
src/: CMakeLists.txt  dcn_kernel.cu  dcn_kernel.h  dcn_plugin.cpp  test_dcn.cu  test_dcn_gemm.cu  test_dcn_half_gemm.cu  test_dcn_int8.cu  test_dcn_int8_gemm.cu
